--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>NgRefresher</title>
-  <base href="“https://eugenefenko.github.io/todo-angular/”">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/es2015-polyfills.js" nomodule></script><script type="text/javascript" src="/polyfills.js"></script><script type="text/javascript" src="/styles.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
+<script type="text/javascript" src="./runtime.js"></script><script type="text/javascript" src="./es2015-polyfills.js" nomodule></script><script type="text/javascript" src="./polyfills.js"></script><script type="text/javascript" src="./styles.js"></script><script type="text/javascript" src="./vendor.js"></script><script type="text/javascript" src="./main.js"></script></body>
 </html>
