--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/todo-angular/runtime.js"></script><script type="text/javascript" src="/todo-angular/es2015-polyfills.js" nomodule></script><script type="text/javascript" src="/todo-angular/polyfills.js"></script><script type="text/javascript" src="/todo-angular/styles.js"></script><script type="text/javascript" src="/todo-angular/vendor.js"></script><script type="text/javascript" src="/todo-angular/main.js"></script></body>
+<script type="text/javascript" src="https://fenko.ga/todo-angular/runtime.js"></script><script type="text/javascript" src="https://fenko.ga/todo-angular/es2015-polyfills.js" nomodule></script><script type="text/javascript" src="https://fenko.ga/todo-angular/polyfills.js"></script><script type="text/javascript" src="https://fenko.ga/todo-angular/styles.js"></script><script type="text/javascript" src="https://fenko.ga/todo-angular/vendor.js"></script><script type="text/javascript" src="https://fenko.ga/todo-angular/main.js"></script></body>
 </html>
