--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>NgRefresher</title>
-  <base href="https://eugenefenko.github.io/todo-angular/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://eugenefenko.github.io/todo-angular">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="/todo-angular/styles.e585dbc8a152351eec01.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/todo-angular/runtime.8fb8d0e7024bf07b6c72.js"></script><script type="text/javascript" src="/todo-angular/es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="/todo-angular/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/todo-angular/main.4111fab3aca7fe34240e.js"></script></body>
+<script type="text/javascript" src="/todo-angular/runtime.8fb8d0e7024bf07b6c72.js"></script><script type="text/javascript" src="/todo-angular/es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="/todo-angular/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/todo-angular/main.f18f23c3b5c5b18091ff.js"></script></body>
 </html>
